AS4 Completed. Ball Collides, The Gamearea now scales according to the assignment.

--- a/Laboration-1-AS-4/Game1/Game1/Game1.csproj
+++ b/Laboration-1-AS-4/Game1/Game1/Game1.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{B5BDBE94-4CA3-4E60-860E-960777B7192B}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Game1</RootNamespace>
     <AssemblyName>Game1</AssemblyName>
@@ -37,6 +37,9 @@
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Model\Ball.cs" />
     <Compile Include="Model\BallSimulation.cs" />
@@ -54,9 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\ball.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="ball-green.png" />
+    <Content Include="Content\ball.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
