Lab 3 almost done, the hitbox still bugs abit

--- a/Laboration-3/Laboration-3/Laboration-3.csproj
+++ b/Laboration-3/Laboration-3/Laboration-3.csproj
@@ -50,6 +50,7 @@
     <Compile Include="View\Camera.cs" />
     <Compile Include="View\Explosion.cs" />
     <Compile Include="View\ExplosionView.cs" />
+    <Compile Include="View\MouseAim.cs" />
     <Compile Include="View\Smoke.cs" />
     <Compile Include="View\Splitter.cs" />
   </ItemGroup>
@@ -68,6 +69,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\red.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\aim.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\smoke.png">
